# dog_model

./: .gitignore  README.md  ros笔记.wps
install/: local_setup.sh  setup.sh
install/DOG/share/DOG/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/DOG/share/DOG/cmake/: DOGConfig.cmake
install/DOG/share/DOG/config/rviz/: display_model.rviz
install/DOG/share/DOG/launch/: display.launch.py  gz_fish.launch.py  gz_gpt.launch.py  gz_sim.launch.py
install/DOG/share/DOG/models/DOG/: model.config
install/DOG/share/DOG/urdf/: DOG.gv
install/DOG/share/ament_index/resource_index/package_run_dependencies/: DOG
install/DOG/share/ament_index/resource_index/parent_prefix_path/: DOG
src/DOG/: CMakeLists.txt  package.xml
src/DOG/config/: controller.yaml  dog.yaml  joint_names_DOG.yaml
src/DOG/launch/: display.launch.py  gazebo_harmonic.launch.py  gazebo_simple.launch.py
src/DOG/urdf/: DOG.gazebo.xacro  DOG.urdf  DOG.xacro  DOG_simple_collision.xacro
src/DOG/worlds/: dog_world.sdf
